Examples/type/operators.js
'use strict';

// let answer = +prompt('Are you here?', 'yes'); //чтобы получить только цифры нужна использовать +
// console.log(typeof(answer));

// console.log("arr" + " - object");
// console.log(4 + " - object");

// let incr = 10,
//     decr = 10;

// console.log(incr++);
// console.log(decr--);

// console.log(5%2);
// console.log("2" == 2);

let isChecked = false,
    isClose = false;

// console.log(isChecked && isClose);
// console.log(isChecked || isClose);
// console.log(isChecked || !isClose);

// a = 5;
// console.log(a);
//error



